eulogy-derive/tests/ui/after_cycle.stderr
error: cycle detected in #[eulogy(after = [...])] dependencies
  --> tests/ui/after_cycle.rs:12:5
   |
12 |     a: Res,
   |     ^
